--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
             </button>
           </div>
     </section>
+    <section class="nosotros">
+        <h2 class="text-center">Quiénes Somos</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum delectus praesentium sapiente error asperiores aspernatur quis quod quo neque! Porro laudantium dicta quibusdam unde! Voluptates, nobis. Voluptas blanditiis animi ut.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates est alias nostrum, autem quas aperiam odit adipisci debitis illo impedit, dolores iusto vitae. Impedit expedita saepe recusandae, accusamus nisi nostrum!</p>
+                </div>
+                <div class="col-6">
+                    <img class="img-fluid" img src="https://picsum.photos/1000/300" alt="imagen 4">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
