--- a/index.html
+++ b/index.html
@@ -105,10 +105,14 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <p>Contáctanos al 123456789</p>
+            <p>Domicilio: Av siempre viva 123</p>
+            <p>Todos los derechos reservados. Creado por: Johan Esteban Villarreal Lasso</p>
+        </div>
+    </footer>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     </body>
