--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
     <title>Proyecto NUEVO</title>
     </head>
@@ -105,13 +106,31 @@
             </div>
         </div>
     </section>
-    <footer>
-        <div class="container">
-            <p>Contáctanos al 123456789</p>
-            <p>Domicilio: Av siempre viva 123</p>
-            <p>Todos los derechos reservados. Creado por: Johan Esteban Villarreal Lasso</p>
+   <footer class="bg-dark text-light py-2 mt-2">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <i class="fa-solid fa-truck fa-5x"></i>
+          <p>Derechos reservados &copy; 2023</p>
         </div>
-    </footer>
+        <div class="col-md-4">
+          <h5>Contacto</h5>
+          <p>Teléfono: 123-456-7890</p>
+          <p>Correo electrónico: correo@tudominio.com</p>
+          <p>Dirección: Calle siempre vica #123, Bogota D.C, Colombia</p>
+        </div>
+        <div class="col-md-4">
+          <h5>Redes sociales</h5>
+          <ul class="list-unstyled">
+            <li><a href="https://www.facebook.com/tu-pagina-de-facebook" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
+            <li><a href="https://www.twitter.com/tu-cuenta-de-twitter" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
+            <li><a href="https://www.instagram.com/tu-cuenta-de-instagram" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
+            <li><a href="https://www.linkedin.com/tu-página-de-linkedin" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
