--- a/index.html
+++ b/index.html
@@ -125,14 +125,17 @@
             <li><a href="https://www.facebook.com/tu-pagina-de-facebook" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
             <li><a href="https://www.twitter.com/tu-cuenta-de-twitter" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
             <li><a href="https://www.instagram.com/tu-cuenta-de-instagram" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
-            <li><a href="https://www.linkedin.com/tu-página-de-linkedin" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+            <li><a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
           </ul>
         </div>
       </div>
     </div>
   </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous">
+    </script>
 
     </body>
 </html>
