--- a/index.html
+++ b/index.html
@@ -107,36 +107,36 @@
         </div>
     </section>
     <section class="servicios">
-      <h2 class="text-center">Quiénes Somos</h2>
+      <h2 class="text-center">Servicios de alimentación</h2>
       <div class="container">
         <div class="row">
           <div class="col-4">
             <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="img/pillito.jpg" class="card-img-top" alt="foto de pollito">
               <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
-                <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+                <h5 class="card-title">Foto de pollito</h5>
+                <p class="card-text">Aquí vemos a un pollito.</p>
+                <a href="#" class="btn btn-primary">Ver más?</a>
               </div>
             </div>
           </div>
           <div class="col-4">
             <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="img/pollo.jpg" class="card-img-top" alt="foto de un pollo">
               <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
-                <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+                <h5 class="card-title">Foto de un pollo</h5>
+                <p class="card-text">Aquí vemos el pollito que ahora es un pollo.</p>
+                <a href="#" class="btn btn-primary">Ver más?</a>
               </div>
             </div>
           </div>
           <div class="col-4">
             <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="img/broaster.jpg" class="card-img-top" alt="foto de un asado">
               <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
-                <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+                <h5 class="card-title">Foto de un Broaster</h5>
+                <p class="card-text">Y aquí vemos al pollo ahora siendo un rico pollito broaster.</p>
+                <a href="#" class="btn btn-primary">Ver más?</a>
               </div>
             </div>
           </div>
