Imagenes card y Contactenos
Se ajustó el tamaño de las imagenes y se añadió el codigo de contactanos.

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
         </div>
     </section>
     <section class="servicios">
-      <h2 class="text-center">Servicios de alimentación</h2>
+      <h2 class="text-center my-3">Servicios de alimentación</h2>
       <div class="container">
         <div class="row">
           <div class="col-4">
             <div class="card" style="width: 18rem;">
               <img src="img/pillito.jpg" class="card-img-top" alt="foto de pollito">
-              <div class="card-body">
+              <div class="card-body" style="height: 200px;">
                 <h5 class="card-title">Foto de pollito</h5>
                 <p class="card-text">Aquí vemos a un pollito.</p>
                 <a href="#" class="btn btn-primary">Ver más?</a>
@@ -123,7 +123,7 @@
           <div class="col-4">
             <div class="card" style="width: 18rem;">
               <img src="img/pollo.jpg" class="card-img-top" alt="foto de un pollo">
-              <div class="card-body">
+              <div class="card-body" style="height: 200px;">
                 <h5 class="card-title">Foto de un pollo</h5>
                 <p class="card-text">Aquí vemos el pollito que ahora es un pollo.</p>
                 <a href="#" class="btn btn-primary">Ver más?</a>
@@ -133,12 +133,47 @@
           <div class="col-4">
             <div class="card" style="width: 18rem;">
               <img src="img/broaster.jpg" class="card-img-top" alt="foto de un asado">
-              <div class="card-body">
+              <div class="card-body" style="height: 200px;">
                 <h5 class="card-title">Foto de un Broaster</h5>
                 <p class="card-text">Y aquí vemos al pollo ahora siendo un rico pollito broaster.</p>
                 <a href="#" class="btn btn-primary">Ver más?</a>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contactenos">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <h2 class="text-center my-3">Contáctanos</h2>
+            <form>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Nombres</label>
+                <input type="email" class="form-control" id="nombre" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">Digita tu numbre.</div>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
+                <input type="email" class="form-control" id="correo" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">Nunca compartiremos tu correo electrónico con nadie.</div>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Asunto</label>
+                <input type="email" class="form-control" id="tema del correo" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">De que tema vas a hablarnos?.</div>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Mensaje</label>
+                <input type="email" class="form-control" id="mensaje del correo" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">Por favor, escribe tu mensaje.</div>
+              </div>
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+          </div>
+          <div class="col-6">
+
           </div>
         </div>
       </div>
