Actualizacion de codigo
Actualización y organización del codigo. No se añadió nuevo codigo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Proyecto NUEVO</title>
     </head>
     <body>
+    <!--Barra de busqueda-->
     <header class="bg-primary">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -52,6 +53,8 @@
               </nav>
         </div>
     </header>
+
+    <!--Carrusel de imagenes-->
     <section class="carrusel">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -92,6 +95,8 @@
             </button>
           </div>
     </section>
+
+    <!--2 parrafos y 1 imagen-->
     <section class="nosotros">
         <h2 class="text-center">Quiénes Somos</h2>
         <div class="container">
@@ -106,6 +111,8 @@
             </div>
         </div>
     </section>
+
+    <!--Cards para el container de servicios-->
     <section class="servicios">
       <h2 class="text-center my-3">Servicios de alimentación</h2>
       <div class="container">
@@ -143,6 +150,8 @@
         </div>
       </div>
     </section>
+
+    <!--Container para contactar-->
     <section class="contactenos">
       <div class="container">
         <div class="row">
@@ -178,6 +187,8 @@
         </div>
       </div>
     </section>
+
+    <!--Footer de datos de la pagina-->
    <footer class="bg-dark text-light py-2 mt-2">
     <div class="container">
       <div class="row">
@@ -204,6 +215,8 @@
     </div>
   </footer>
 
+  
+    <!--Script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous">
